objects/Case.object
<CustomObject>
    <fields>
        <fullName>Claim_Sub_type__c</fullName>
        <label>Claim Sub-type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Cable(s)</fullName>
                </value>
                <value>
                    <fullName>Combiners</fullName>
                </value>
                <value>
                    <fullName>DAS/SCADA/Comms Equipment</fullName>
                </value>
                <value>
                    <fullName>Roofing</fullName>
                </value>
                <value>
                    <fullName>Infrastructure/Roads/Access</fullName>
                </value>
                <value>
                    <fullName>PCS Skid</fullName>
                </value>
                <value>
                    <fullName>Transformer (Med/High Voltage)</fullName>
                </value>
                <value>
                    <fullName>Structural</fullName>
                </value>
                <value>
                    <fullName>Switchgear</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Mechanical/Structural</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <inlineHelpText>Effected component on site. If the whole electrical system is effected, the component is the point of connection (example: switch gear)</inlineHelpText>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>Racking</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Switch Gear</fullName>
                </value>
                <value>
                    <fullName>Transformer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>for Portal user to enter their name  for reference as to who created Case from Portal</description>
        <inlineHelpText>This is the name of the person that created the case via the customer portal.  Not used by O&amp;M</inlineHelpText>
        <label>Actual Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hidden field used by CaseClosureFormController. Is used to select Contacts to send the case closure form to.</description>
        <label>Contacts</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (ccfContacts)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrego Warranty</fullName>
                </value>
                <value>
                    <fullName>O&amp;M and Warranty</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>O&amp;M T&amp;M</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>T&amp;M and Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_Down_System__c</fullName>
        <formula>cost_kWh__c  * (  Case_End_Date__c -  Case_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Down System</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Billable_Con_Reqs__c</fullName>
        <description>used iwth roll up helper</description>
        <inlineHelpText>counts # of records that Billable in the con req type on the service visit</inlineHelpText>
        <label>Count Billable Con Reqs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Ready_for_Closure__c</fullName>
        <description>Created by Rollup Helper</description>
        <inlineHelpText>counts # of completed work order lines</inlineHelpText>
        <label>Count Ready for Closure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_Escalated_to_Director__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Escalated to Director&quot;),   Total_Days_on_Escalated_to_Director__c   + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Escalated_to_Director__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;Escalated to Director&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_On_Hold_Customer__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;On Hold - Waiting Customer Response&quot;),  Total_Days_on_On_hold_customer__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_On_hold_customer__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;On Hold - Customer&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_On_Hold_Follow_Up__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;ON HOLD Follow Up&quot;),  Total_Days_on_On_Hold_Follow_Up__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_On_Hold_Follow_Up__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;On Hold - Follow Up&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_On_Hold_Parts__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;On Hold - Waiting for Parts&quot;),  Total_Days_On_Hold_Parts__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_On_Hold_Parts__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;On Hold - Parts&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_On_Hold_RMA__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;On Hold - RMA&quot;),  Total_Days_on_On_Hold_RMA__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_On_Hold_RMA__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;On Hold - RMA&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_On_Hold_Weather__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;On Hold - Weather Advisory&quot;),  Total_Days_on_On_Hold_Weather__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_On_Hold_Weather__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days &quot;On Hold - Weather&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Deployment_Review__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Deployment Review&quot;),  Total_Days_on_Deployment_Review__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Deployment_Review__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on Deployment Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Escalated_to_RM__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Escalated to Regional Manager&quot;),  Total_Days_on_Escalated_to_RM__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Escalated_to_RM__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on &quot;Escalated to RM&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Escalated_to_SPG__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Escalated to SPG&quot;),  Total_Days_on_Escalated_to_SPG__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Escalated_to_SPG__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on &quot;Escalated to SPG&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Hold__c</fullName>
        <formula>Total_Days_on_Hold__c + Current_Days_on_Hold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>shows a cumulative # of days the case has been on hold, will include current days but also days from a previous hold if there were any</inlineHelpText>
        <label>Cumulative Days on Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Inventory_Fulfillment__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Inventory Fulfillment&quot;),  Total_Days_on_Inventory_Fulfillment__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Inventory_Fulfillment__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on Inventory Fulfillment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_New_Case_Status__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;New Case&quot;),  Total_Days_on_New_Case_Status__c  +  Amount_of_days_on_most_recent_status__c ,  Total_Days_on_New_Case_Status__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on New Case Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Ops_Review__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Ops Review&quot;),  Total_Days_on_Ops_Review__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Ops_Review__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on Ops Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Pending_Quote__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Pending Quote&quot;),   Total_Days_on_Pending_Quote__c   + Amount_of_days_on_most_recent_status__c ,   Total_Days_on_Pending_Quote__c   + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on Pending Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Ready_to_Schedule__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Ready to Schedule&quot;),  Total_Days_on_Ready_to_Schedule__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Ready_to_Schedule__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on &quot;Ready to Schedule&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Scheduled__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Scheduled&quot;),  Total_Days_on_Scheduled__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Scheduled__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Days_on_Subcontracted__c</fullName>
        <formula>IF(
ISPICKVAL(Status,&quot;Subcontracted&quot;),  Total_Days_on_Subcontracted__c  + Amount_of_days_on_most_recent_status__c ,  Total_Days_on_Subcontracted__c  + 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Days on &quot;Subcontracted&quot;</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Days_on_Hold__c</fullName>
        <formula>IF (
OR(
ISPICKVAL(Status, &quot;On Hold&quot;), 
ISPICKVAL(Status, &quot;On Hold - ENG/SPG Review&quot;), 
ISPICKVAL(Status, &quot;On Hold - RMA&quot;), 
ISPICKVAL(Status, &quot;On Hold - Waiting for Parts&quot;), 
ISPICKVAL(Status, &quot;On Hold - Weather Advisory&quot;)
), Today() -  Start_Date_of_Most_Recent_Hold__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if the case is currently on hold (indicated by a status of on hold ) this field calculates the # of days between today and start date of most recent hold. If there is no current hold this field value should be 0.</inlineHelpText>
        <label>Current Days on Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_Size__c</fullName>
        <formula>ServiceContract_Case__r.ASProject__r.Overall_Project_Size_Watts_STC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Name__c</fullName>
        <formula>SUBSTITUTE( Project__r.Customer_Project_Name__c, &apos;&amp;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DASDeviceID__c</fullName>
        <description>used with Diaspark to link the case to the equipment
autopopulated via email from DAS platform</description>
        <label>DAS Device ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAS_Alerts_Restored__c</fullName>
        <description>Date when DAS Admin restores Alert configuration.</description>
        <inlineHelpText>Date when DAS Admin restores Alert configuration.</inlineHelpText>
        <label>DAS Alerts Restored</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAS_Alerts_Suspended__c</fullName>
        <description>Used by DAS Administrator to track changes in alert configuration.</description>
        <inlineHelpText>Used by DAS Administrator to track changes in alert configuration.</inlineHelpText>
        <label>DAS Alerts Suspended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_1_Business_Day_From_Open_Date__c</fullName>
        <formula>CASE( 
MOD((DATEVALUE(CreatedDate)) - DATE( 1900, 1, 7 ), 7), 
3, (DATEVALUE(CreatedDate)) + 2 + 1, 
4, (DATEVALUE(CreatedDate)) + 2 + 1, 
5, (DATEVALUE(CreatedDate)) + 2 + 1, 
6, (DATEVALUE(CreatedDate)) + 1 + 1, 
(DATEVALUE(CreatedDate)) + 1 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>caculates date that is 1 business day from Date Opened</inlineHelpText>
        <label>Date:  1 Business Day From Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Parts_Hold__c</fullName>
        <description>auto populates with the date the 1st time a Case uses the status of ON HOLD - Waiting for Parts</description>
        <inlineHelpText>auto populates with the date the 1st time a Case uses the status of ON HOLD - Waiting for Parts</inlineHelpText>
        <label>Date 1st Parts Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_RMA_Hold__c</fullName>
        <description>auto populates with the date a case first uses the status of ON HOLD - RMA</description>
        <inlineHelpText>auto populates with the date a case first uses the status of ON HOLD - RMA</inlineHelpText>
        <label>Date 1st RMA Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Weather_Hold__c</fullName>
        <description>auto populates with the date the 1st time a Case uses the status of ON HOLD - Weather Advisory</description>
        <inlineHelpText>auto populates with the date the 1st time a Case uses the status of ON HOLD - Weather Advisory</inlineHelpText>
        <label>Date 1st Weather Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Parts_Hold__c</fullName>
        <description>auto populates with the date the 2nd time a Case uses the status of ON HOLD - Waiting for Parts</description>
        <inlineHelpText>auto populates with the date the 2nd time a Case uses the status of ON HOLD - Waiting for Parts</inlineHelpText>
        <label>Date 2nd Parts Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_RMA_Hold__c</fullName>
        <description>auto populates with the date the 2nd time a Case uses the status of ON HOLD - RMA</description>
        <inlineHelpText>auto populates with the date the 2nd time a Case uses the status of ON HOLD - RMA</inlineHelpText>
        <label>Date 2nd RMA Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Weather_Hold__c</fullName>
        <description>auto populates with the date the 2nd time a Case uses the status of ON HOLD - Weather Advisory</description>
        <inlineHelpText>auto populates with the date the 2nd time a Case uses the status of ON HOLD - Weather Advisory</inlineHelpText>
        <label>Date 2nd Weather Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_3_Business_Days_From_Open_Date__c</fullName>
        <formula>CASE( 
MOD((DATEVALUE(CreatedDate)) - DATE( 1900, 1, 7 ), 7), 
3, (DATEVALUE(CreatedDate)) + 2 + 3, 
4, (DATEVALUE(CreatedDate)) + 2 + 3, 
5, (DATEVALUE(CreatedDate)) + 2 + 3, 
6, (DATEVALUE(CreatedDate)) + 1 + 3, 
(DATEVALUE(CreatedDate)) + 3 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates date that is 3 business days from Date Opened</inlineHelpText>
        <label>Date:  3 Business Days From Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_5_Business_Days_From_Open_Date__c</fullName>
        <description>calculates 5 business days from date opened - needed for workflow time alert</description>
        <formula>CASE( 
MOD((DATEVALUE(CreatedDate)) - DATE( 1900, 1, 7 ), 7), 
3, (DATEVALUE(CreatedDate)) + 2 + 5, 
4, (DATEVALUE(CreatedDate)) + 2 + 5, 
5, (DATEVALUE(CreatedDate)) + 2 + 5, 
6, (DATEVALUE(CreatedDate)) + 1 + 5, 
(DATEVALUE(CreatedDate)) + 5
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates 5 business days from date opened - needed for workflow time alert</inlineHelpText>
        <label>Date: 5 Business Days From Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_7_Business_Days_From_Open_Date__c</fullName>
        <description>calculates date 7 business days from date opened - used in workflow time trigger</description>
        <formula>CASE( 
MOD((DATEVALUE(CreatedDate)) - DATE( 1900, 1, 7 ), 7), 
3, (DATEVALUE(CreatedDate)) + 2 + 7, 
4, (DATEVALUE(CreatedDate)) + 2 + 7, 
5, (DATEVALUE(CreatedDate)) + 2 + 7, 
6, (DATEVALUE(CreatedDate)) + 1 + 7, 
(DATEVALUE(CreatedDate)) + 7 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates date 7 business days from date opened - used in workflow time trigger</inlineHelpText>
        <label>Date: 7 Business Days From Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Case_Completed__c</fullName>
        <label>Date Case Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_ENG_SPG_Review_2nd_Hold__c</fullName>
        <description>auto date stamps when case goes on hold for spgeng review a 2nd time - WF</description>
        <inlineHelpText>auto date stamps when case goes on hold for spgeng review a 2nd time</inlineHelpText>
        <label>Date ENG SPG Review 2nd Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Low_Priority__c</fullName>
        <label>Date Low Priority</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Maintenance_Completed__c</fullName>
        <inlineHelpText>auto date stamps when Status of Completed is selected</inlineHelpText>
        <label>Date Maintenance Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Medium_Priority__c</fullName>
        <inlineHelpText>displays date priority field was set to Medium</inlineHelpText>
        <label>Date Medium Priority</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Most_Recent_Email__c</fullName>
        <description>NOT BEING USED AT THIS TIME</description>
        <inlineHelpText>pull the date of the most recently sent email to track sending of maintenance cases</inlineHelpText>
        <label>Date Most Recent Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <inlineHelpText>date you need to have the request completed by</inlineHelpText>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_First_Work_Order__c</fullName>
        <description>stamps date/time of when work was started - rolls up from related Work Orders - used with RH</description>
        <inlineHelpText>stamps date/time of when work was started - rolls up from related Work Orders</inlineHelpText>
        <label>Date/Time First Work Order</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_vendor_contacted__c</fullName>
        <inlineHelpText>Enter the date and time that the vendor was contacted.</inlineHelpText>
        <label>Date/Time vendor contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_vendor_onsite__c</fullName>
        <inlineHelpText>Enter the date and time that the vendor arrived onsite.</inlineHelpText>
        <label>Date/Time vendor onsite</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Inverter_Down__c</fullName>
        <inlineHelpText>Total days the affected asset is down</inlineHelpText>
        <label>Days Component Down</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Tracker_Down__c</fullName>
        <inlineHelpText>Used in calculation downtime (important if system is back up, but case is still open).</inlineHelpText>
        <label>Days Tracker Down</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emergency_Priority_Date__c</fullName>
        <inlineHelpText>displays date the priority was set to Emergency</inlineHelpText>
        <label>Emergency Priority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>Any erro code that is being displayed on the inverter.</description>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Hold_Release_Date__c</fullName>
        <formula>Expected_of_Days_on_Hold__c +  Start_Date_of_Most_Recent_Hold__c</formula>
        <inlineHelpText>add # of days expected to be hold to start date of most recent hold</inlineHelpText>
        <label>Expected Hold Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_of_Days_on_Hold__c</fullName>
        <inlineHelpText>calculate anticipated days case will be on hold</inlineHelpText>
        <label>Expected # of Days on Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Externally_Caused_Event__c</fullName>
        <description>Type of incident, possibly updated by SPG via WF from Case Cause, visible/editable only to them</description>
        <inlineHelpText>Type of Incident- Used in Availability Reporting</inlineHelpText>
        <label>Availability Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Customer Caused Downtime</fullName>
                </value>
                <value>
                    <fullName>Utility Outage</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Reactive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Snow or Ice</fullName>
                </value>
                <value>
                    <fullName>Delay (Equipment Out of Warranty)</fullName>
                </value>
                <value>
                    <fullName>Delay (Manufacturer Caused)</fullName>
                </value>
                <value>
                    <fullName>Force Majeure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spare Parts Not In Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>False_Alert_Type__c</fullName>
        <description>used to identify why a false alert would have occurred, once selected it will close the case and update cause.</description>
        <inlineHelpText>used to identify why a false alert would have occurred, once selected it will close the case and update cause.</inlineHelpText>
        <label>False Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Alert</fullName>
                </value>
                <value>
                    <fullName>Planned Site Activity Alert</fullName>
                </value>
                <value>
                    <fullName>False Alert</fullName>
                </value>
                <value>
                    <fullName>Shade Issue</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Non-managed Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Image_URL__c</fullName>
        <formula>LEFT( $Api.Enterprise_Server_URL_100, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 ) + 4)&amp; &quot;sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; &amp; Id &amp; &quot;&amp;operationContext=CHATTER&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedCostsQuoted__c</fullName>
        <description>quoted fixed costs for customer - if values exist on related contract those will be brought over upon creation of the case, but they can be edited if necessary.</description>
        <inlineHelpText>quoted fixed costs for customer - if values exist on related contract those will be brought over upon creation of the case, but they can be edited if necessary.</inlineHelpText>
        <label>Fixed Costs - Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GLC_Project__c</fullName>
        <formula>IF(OR((ISPICKVAL(Origin,&quot;PPA&quot;)),(ISPICKVAL( ServiceContract_Case__r.Project__r.Opportunity__r.Financing__c, &quot;PPA&quot;)),(ISPICKVAL( ServiceContract_Case__r.Project__r.Opportunity__r.Financing__c, &quot;PPA – Borrego&quot;))) , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically filled in and determines if the case should be shared with GLC.</inlineHelpText>
        <label>GLC Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Priority_Date__c</fullName>
        <inlineHelpText>displays the date the priority was set to HIGH</inlineHelpText>
        <label>High Priority Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_At_Site__c</fullName>
        <description>Number of hours spent at site repairing problem</description>
        <label>Hours At Site</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Component_Down__c</fullName>
        <description>enter # of hours component was down, if more than a full day use Days Component Down field</description>
        <inlineHelpText>enter # of hours component was down, if more than a full day use Days Component Down field</inlineHelpText>
        <label>Hours Component Down</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>